--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@wdio/local-runner": "^8.3.5",
     "@wdio/mocha-framework": "^8.3.0",
     "@wdio/spec-reporter": "^8.3.0",
-    "chromedriver": "^110.0.0",
+    "chromedriver": "^112.0.0",
     "selenium-standalone": "^8.3.0",
     "wdio-chromedriver-service": "^8.0.1",
     "wdio-intercept-service": "^4.3.1"
@@ -16,6 +16,8 @@
     "wdio": "wdio run ./wdio.conf.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "jsdom": "^22.0.0",
     "shelljs": "^0.8.5"
   }
 }
