--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "wdio": "wdio run ./wdio.conf.js",
     "unic": "wdio run ./wdio.conf.js --suite unicCheck",
-    "link": "wdio run ./wdio.conf.js --suite linkCheck",
+    "link": "wdio run ./link.wdio.conf.js --suite linkCheck",
     "index": "wdio run ./wdio.conf.js --suite indexCheck"
   },
   "dependencies": {
